deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zentrix-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zentrix
  template:
    metadata:
      labels:
        app: zentrix
    spec:
      imagePullSecrets:
        - name: ghcr-login
      containers:
      - name: lab-container
        image: ghcr.io/zentrix566/devops:latest
        imagePullPolicy: Always # 这样每次重启都会拉最新的镜像
        ports:
        - containerPort: 80
          hostPort: 80  # 核心：直接占领宿主机 80 端口
---
apiVersion: v1
kind: Service
metadata:
  name: zentrix-service
spec:
  type: ClusterIP
  selector:
    app: zentrix
  ports:
    - port: 80
      targetPort: 80
